--- a/index.html
+++ b/index.html
@@ -1,31 +1,73 @@
+<!-- BEGIN (write your solution here) -->
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<link href="style.css" rel="stylesheet">
+	<link type="icon" href="/favicon.ico">
+	<title>Резюме</title>
 </head>
 
 <body>
-<h2>Гештальт-психология</h2>
-<p class="main-text">Гештальт-психология к 20-м годам XX столетия заняла достаточно прочные позиции в Германии. Но её дальнейшему развитию помешала политика.</p>
+	<header id="header">
+		<h1>Александр Смирнов</h1>
+		<h2>Веб-разработчик</h2>
+		<p><a href="mailto:ggrelaxi@gmail.com">ggrelaxi@gmail.com</a>, <a href="https://soc-faq.ru">https://soc-faq.ru</a></p>
+	</header>
 
-<h2>Фигура и фон</h2>
-<p class="main-text">Простейшее формирование восприятия заключается в разделении зрительных ощущений на объект — фигуру, расположенный на фоне. Выделение фигуры из фона и удержание объекта восприятия включает психофизиологические механизмы.</p>
+	<main id="main">
+		<section>
+			<h2>Опыт работы</h2>
+				<h3>Работа 3</h3>
+				<p>На этой работе снова работал</p>
+					<ul>
+						<li>Программировал</li>
+						<li>Разрабатывал</li>
+					</ul>
 
-<h2>Константы восприятия</h2>
+					<h3>Работа 2</h3>
+				<p>На этой работе снова работал</p>
+					<ul>
+						<li>Программировал</li>
+						<li>Разрабатывал</li>
+					</ul>
 
-<div class="main-text">
-  <ul>
-    <li>Константность размера</li>
-    <li>Константность формы</li>
-    <li>Константность яркости</li>
-  </ul>
-</div>
+					<h3>Работа 1</h3>
+				<p>На этой работе снова работал</p>
+					<ul>
+						<li>Программировал</li>
+						<li>Разрабатывал</li>
+					</ul>
+		</section>
 
-<div class="links">
-  <span class="icon">📞 </span>+7 919 718 2212
-  <span class="icon">✉️ </span>contact@jki.com
-</div>
+		<section>
+			<h2>Образование</h2>
+			
+				<h3>Университет 2</h3>
+				<p>Магистр компьютерных наук, <i>2008-2013</i></p>
 
+				<h3>Университет1</h3>
+				<p>Бакалавр умных технологий, <i>2001-2005</i></p>
+		</section>
+			<h2>Увлечения</h2>
+			
+				<ul>
+					<li>Качалка</li>
+					<li>Книги</li>
+					<li>Рыбалка</li>
+				</ul>
+		<section>
+
+		</section>
+
+		
+	</main>
+
+	<footer id="footer">
+		<p>Александр Смирнов</p>
+		<p>Нижний Новгород, сормовское шоссе 15. +79200336379, <a href="mailto:ggrelaxi@gmail.com">ggrelaxi@gmail.com</a></p>
+	</footer>
 </body>
 
 </html>
+<!-- END -->
