--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<link href="style.css" rel="stylesheet">
 	<link type="icon" href="/favicon.ico">
-	<title>Резюме</title>
+	<title>My Резюме</title>
 </head>
 
 <body>
